--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-cli-ghpages": "^0.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typedoc": "^0.23.7",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
